improved builtin paths test case (it didn't really do anything to begin with); fixed bug which prevented builtin-ful content not to be able to access builtin-less meta (i hope that make sense to you)

--- a/test/fixtures/site_with_builtin_paths/layouts/other.erb
+++ b/test/fixtures/site_with_builtin_paths/layouts/other.erb
@@ -3,7 +3,7 @@
     <title><%= @page.title %></title>
   </head>
   <body>
-    <p>This is the default layout.</p>
+    <p>This is the other layout.</p>
 <%= @page.content %>
   </body>
 </html>
