improved private tag documentation

--- a/doc/yardoc_templates/default/docstring/html/nonpublic.erb
+++ b/doc/yardoc_templates/default/docstring/html/nonpublic.erb
@@ -1,4 +1,4 @@
 <p class="note nonpublic">
   <strong>This <%= object.type %> is not part of the public API.</strong> 
-  <%= htmlify_line object.tag(:private).text %>
+  Do not rely on its presence; future versions may no longer contain this <%= object.type %>.
 </p>
