added canonical url to header
--HG--
branch : 3.1.x

--- a/doc/yardoc_templates/default/layout/html/layout.erb
+++ b/doc/yardoc_templates/default/layout/html/layout.erb
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <%= erb(:headers) %>
+    <link rel="canonical" href="http://nanoc.stoneship.org/docs/api/3.2/<%= url_for(object, nil, false) %>"/>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
