updated canonical api docs url to point to the current one
--HG--
branch : 3.1.x

--- a/doc/yardoc_templates/default/layout/html/layout.erb
+++ b/doc/yardoc_templates/default/layout/html/layout.erb
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <%= erb(:headers) %>
-    <link rel="canonical" href="http://nanoc.stoneship.org/docs/api/3.3/<%= url_for(object, nil, false).sub('Nanoc3', 'Nanoc').sub('top-level-namespace.html', '') %>"/>
+    <link rel="canonical" href="http://nanoc.stoneship.org/docs/api/current/<%= url_for(object, nil, false).sub('Nanoc3', 'Nanoc').sub('top-level-namespace.html', '') %>"/>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
